<resources>
    <string name="app_name">Test Shopping List App@Neal\n wangbao.2020@163.com</string>
    <string name="text_cotent">Hello, Neal!\n Come on ,you will be the best!\n You will sucess!\n Believe yourself!\n A just a exerise!Thank you !</string>
    <string name="title">ShoppingList</string>
    <string name="person_name">Neal</string>
    <string name="send_button">Send</string>
    <string name="button_accept">Accept</string>
    <string name="button_reject">Reject</string>
</resources>
